Fix spacing for list items
Closes #47

--- a/src/routes/_global.scss
+++ b/src/routes/_global.scss
@@ -128,7 +128,7 @@ h4 {
   margin: 0 0 1.38rem;
 }
 
-p {
+p, li {
   color: var(--body-text-color);
   margin-bottom: 1rem;
   line-height: 1.75;
